cccalendar/force-app/main/default/objects/Activity/fields/Calendar_Background_Color__c.field-meta.xml
<CustomField>
    <fullName>Calendar_Background_Color__c</fullName>
    <defaultValue>&quot;Blue&quot;</defaultValue>
    <description>CSS color code for event background color in calendar view</description>
    <inlineHelpText>CSS color code for event background color in calendar view</inlineHelpText>
    <label>Calendar Background Color</label>
    <length>255</length>
    <type>Text</type>
</CustomField>