cccalendar/force-app/main/default/objects/Activity/fields/Calendar_Border_Color__c.field-meta.xml
<CustomField>
    <fullName>Calendar_Border_Color__c</fullName>
    <defaultValue>&quot;Blue&quot;</defaultValue>
    <description>CSS color code for event border color in calendar view</description>
    <inlineHelpText>CSS color code for event border color in calendar view</inlineHelpText>
    <label>Calendar Border Color</label>
    <length>255</length>
    <type>Text</type>
</CustomField>