cccalendar/force-app/main/default/objects/Activity/fields/Calendar_Rendering__c.field-meta.xml
<CustomField>
    <fullName>Calendar_Rendering__c</fullName>
    <defaultValue>&quot;Normal&quot;</defaultValue>
    <description>Mode to render event with on Calendar: The rendering type of this event. Can be empty (normal rendering), &quot;background&quot;, or &quot;inverse-background&quot;</description>
    <inlineHelpText>Mode to render event with on Calendar: The rendering type of this event. Can be empty (normal rendering), &quot;background&quot;, or &quot;inverse-background&quot;</inlineHelpText>
    <label>Calendar Rendering</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Normal</fullName>
                <default>true</default>
                <label>Normal</label>
            </value>
            <value>
                <fullName>Background</fullName>
            </value>
            <value>
                <fullName>Inverse-Background</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>