cccalendar/force-app/main/default/objects/Activity/fields/Calendar_Text_Color__c.field-meta.xml
<CustomField>
    <fullName>Calendar_Text_Color__c</fullName>
    <defaultValue>&quot;White&quot;</defaultValue>
    <description>CSS color code for event text color in calendar view</description>
    <inlineHelpText>CSS color code for event text color in calendar view</inlineHelpText>
    <label>Calendar Text Color</label>
    <length>255</length>
    <type>Text</type>
</CustomField>