cccalendar/force-app/main/default/objects/Activity/fields/Display_Events_Local_Timezone__c.field-meta.xml
<CustomField>
    <fullName>Display_Events_Local_Timezone__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check to display event&apos;s local timezone in event details</description>
    <inlineHelpText>Check to display event&apos;s local timezone in event details</inlineHelpText>
    <label>Display Event&apos;s Local Timezone</label>
    <type>Checkbox</type>
</CustomField>