cccalendar/force-app/main/default/objects/Activity/fields/Event_Icon_Name__c.field-meta.xml
<CustomField>
    <fullName>Event_Icon_Name__c</fullName>
    <defaultValue>&quot;utility:events&quot;</defaultValue>
    <description>SLDS icon name for the event, from http://www.lightningdesignsystem.com/icons/. Example: utility:events</description>
    <inlineHelpText>SLDS icon name for the event, from http://www.lightningdesignsystem.com/icons/. Example: utility:events</inlineHelpText>
    <label>Event Icon Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>