cccalendar/force-app/main/default/objects/Activity/fields/Event_URL_2__c.field-meta.xml
<CustomField>
    <fullName>Event_URL_2__c</fullName>
    <description>Button link on Event</description>
    <inlineHelpText>Button link on Event</inlineHelpText>
    <label>Event URL 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>