cccalendar/force-app/main/default/objects/Activity/fields/Event_URL_2_Open_in_Same_Tab__c.field-meta.xml
<CustomField>
    <fullName>Event_URL_2_Open_in_Same_Tab__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Event URL 2 Open in Same Tab</label>
    <type>Checkbox</type>
</CustomField>