cccalendar/force-app/main/default/objects/Activity/fields/Event_URL_Text_2__c.field-meta.xml
<CustomField>
    <fullName>Event_URL_Text_2__c</fullName>
    <description>Text to display on button linking to event URL field</description>
    <inlineHelpText>Text to display on button linking to event URL field</inlineHelpText>
    <label>Event URL Text 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>