cccalendar/force-app/main/default/objects/Activity/fields/Image_URL__c.field-meta.xml
<CustomField>
    <fullName>Image_URL__c</fullName>
    <description>URL for Event Image, to be used for Tile Display</description>
    <inlineHelpText>URL for Event Image, to be used for Tile Display</inlineHelpText>
    <label>Image URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>