cccalendar/force-app/main/default/objects/Activity/fields/Local_Timezone__c.field-meta.xml
<CustomField>
    <fullName>Local_Timezone__c</fullName>
    <description>Specify event&apos;s local timezone. Required if Display event&apos;s local timezone is checked</description>
    <inlineHelpText>Specify event&apos;s local timezone. Required if Display event&apos;s local timezone is checked</inlineHelpText>
    <label>Local Timezone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>IANA_Timezones</valueSetName>
    </valueSet>
</CustomField>